--- a/pages/SecAppList.html
+++ b/pages/SecAppList.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: ⚙️ SecApp Search
-permalink: /SecApp_Search/
+title: ⚙️ SecAppList
+permalink: /SecApp/
 subtitle: "Search for Security Programs"
 feature-img: "assets/img/pexels/ai-blur-codes-577585.jpg"
 ---
