--- a/pages/SecAppList.html
+++ b/pages/SecAppList.html
@@ -8,4 +8,4 @@ feature-img: "assets/img/pexels/ai-blur-codes-577585.jpg"
 
 work in progress
 
-<a href="http://localhost:4000/assets/data/Sec_Programs.xml">HERE</a>
+<a href="/assets/data/Sec_Programs.xml">HERE</a>
