Layout updates and tweeks

--- a/pages/SecAppList.html
+++ b/pages/SecAppList.html
@@ -1,8 +1,8 @@
 ---
 layout: page
 title: ⚙️ SecAppList
-permalink: /SecApp/
-subtitle: "Search for Security Programs"
+permalink: /SecApps/
+subtitle: "Search tool for Security Programs"
 feature-img: "assets/img/pexels/ai-blur-codes-577585.jpg"
 ---
 
